--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,12 @@
   "name": "برنامه نقشه من",
   "icons": [
     {
-      "src": "https://via.placeholder.com/192.png",
+    "src": "https://ostadzade.github.io/MyMapApp/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "https://via.placeholder.com/512.png",
+    "src": "https://ostadzade.github.io/MyMapApp/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
